# rsserpent-plugin-bilibili

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: test.yaml
rsserpent_plugin_bilibili/: __init__.py  route.py  video.py
rsserpent_plugin_bilibili/app/: __init__.py  update.py
rsserpent_plugin_bilibili/user/: __init__.py  bangumi.py  cinema.py  video.py
rsserpent_plugin_example/: __init__.py  api.py  html.py
scripts/: update.py
tests/: conftest.py  test_main.py  test_route.py
tests/app/: test_update.py
tests/user/: test_video.py
