[tool.poetry]
name = "rsserpent-plugin-bilibili"
version = "0.0.1"
description = "Bilibili subscriber"
authors = ["Queensferry <queensferry.me@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
pyquery = "^1.4.3"
requests = "^2.25.1"
rsserpent = "^0.1.0-alpha.4"

[tool.poetry.dev-dependencies]
fastapi = "^0.65.2"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.black]
include = '\.pyi?$'
target-version = ["py36", "py37", "py38", "py39"]

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
lines_after_imports = 2
profile = "black"

[tool.poetry.plugins."rsserpent.plugins"]
"bilibili" = "rsserpent_plugin_bilibili:plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
